# gnomeconsolemock

./: Cargo.toml  README.md
.github/: workflows.yml
.github/workflows/: rust.yml
src/: config.rs  main.rs
