[package]
name = "GnomeConsoleMock"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus = { version = "5.7.1" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
json_comments = "0.2.2"
shlex = "1.3.0"